Changelog
=========

2015/10/17 (v0.4.4)
 - Closes bugs :
   - #8 IPv6 Async scanner doesn't work

2015/09/11 (v0.4.3)
 - Change in url for __get_last_online_version

2015/09/11 (v0.4.2)
 - Closes bugs :
   - #7: Error with empty hostname
   - #6: Windows support of close_fds if you redirect stdin/stdout/stderr
	
2015/08/21 (v0.4.1)
 - Closes bugs :
   - #5: only one hostname stored per host
 - Add hostnames() method which return the list of hostnames as a list of
   dict [{'name':'hostname1', 'type':'PTR'}, {'name':'hostname2', 'type':'user'}]

2015/08/01 (v0.4.0)
 - Closes bugs :
   - #2: use close_fds in subprocess.Popen
   - #3: memory leak parsing xml using xml.dom.minidom
 - Corrects a bug in parsing osclass
 - Add nosetests for case testing
 - Removed test case in docstring

2015/05/08 (v0.3.7)
 - adding sudo parameter for scanning (idea from scupython)

2015/05/08 (v0.3.6)
 - correcting issue 7 : Issues under windows

2015/05/08 (v0.3.5)
 - correcting a bug in all_protocols()
 - correcting issue 8 : PortScannerAsync Doesn't work in windows...

2014/06/22 (v0.3.4)
 - adding PortScannerYield class with generator
   >>> nm = nmap.PortScannerYield()
   >>> for i in nm.scan('127.0.0.1/24', '22-25'):
   >>>     print(i)

2014/03/13 (v0.3.3)
 - moving file example.py
 - adding function convert_nmap_output_to_encoding
 - adding vendor for mac address

2013/09/23 (v0.3.2)
 - adding acces to CPE values under [host][proto][port]['cpe'] key

2013/07/27 (v0.3.1)
 - Bug correction on callback's assert in PortScannerAsync.scan
   proposed by Robert Bost

2013/06/23 (v0.3.0)
 - added support for NMAP SCRIPT ENGINE
   >>> r=nm.scan(hosts='127.0.0.1', ports='139', arguments="-sC ")
   >>> print(nm._scan_result['scan']['127.0.0.1']['hostscript'])

2013/02/24 (v0.2.7)
 - added an address block in host scan result which contains ipv4, mac and other addresses :
   nm = nmap.PortScanner()
   r = nm.scan(arguments='-sS -p T:22', hosts='192.168.1.3')